// ====================================================================
// HISTORY
// VERSION : 1.1.2 : FA : #7453 : 07/08/2017 : Move adapters folder in client folder
// END-HISTORY
// ====================================================================

package dataControllerUtils.protobuf;

message FMDGet {
extensions 4 to 106;
    required string serializedOid = 3; ///< serializeOID contains the type of the file and the domainId
}
